<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.details.DetailsActivity">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="sans-serif-medium"
        android:textColor="#EFEFEF"
        android:textSize="20sp"
        tools:text="@string/forecast_to"
        />

    <RelativeLayout
        android:id="@+id/currentForecast"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        android:foreground="@drawable/curve_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifCurrent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/weather_gif_801d"
            />

        <TextView
            android:id="@+id/currentDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:textColor="#EFEFEF"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            tools:text="@string/today"
            />

        <TextView
            android:id="@+id/labelTemperature1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentDateTV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#EFEFEF"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:text="@string/temperature"/>

        <TextView
            android:id="@+id/currentCelsiusTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelTemperature1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#EFEFEF"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:textSize="22sp"
            tools:text="30°C"/>

        <LinearLayout
            android:id="@+id/minCLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelTemperature1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/labelMinimum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="#EFEFEF"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="0.1"
                android:text="@string/minimum_temperature"/>

            <TextView
                android:id="@+id/minCurrentCelsiusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#EFEFEF"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="0.1"
                tools:text="23°C"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:baseline="@+id/minCLinearLayout"
            android:layout_below="@+id/currentCelsiusTV">

            <ImageView
                android:id="@+id/currentWeatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/weather_820d"
                android:contentDescription="@string/weather_icon_desc"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/maxCLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelTemperature1"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/labelMaximum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="#EFEFEF"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="0.1"
                android:text="@string/maximum_temperature"/>

            <TextView
                android:id="@+id/maxCurrentCelsiusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#EFEFEF"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="0.1"
                tools:text="33°C"/>

        </LinearLayout>

        <TextView
            android:id="@+id/currentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentCelsiusTV"
            android:layout_marginTop="48dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:textColor="#EFEFEF"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            tools:text="Descrição"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/forecastWeather"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:foreground="@drawable/curve_border"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/currentForecast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifForecast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/weather_gif_801d"
            />

        <TextView
            android:id="@+id/forecastDayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:textColor="#EFEFEF"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            tools:text="@string/tomorrow"
            />

        <TextView
            android:id="@+id/labelTemperature2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forecastDayTV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#EFEFEF"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            android:text="@string/forecast"/>

        <LinearLayout
            android:id="@+id/minFLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelTemperature2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/labelMinimum2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="#EFEFEF"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="0.1"
                android:text="@string/minimum_temperature"/>

            <TextView
                android:id="@+id/minForecastCelsiusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#EFEFEF"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="0.1"
                tools:text="23°C"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/labelTemperature2">

            <ImageView
                android:id="@+id/forecasttWeatherIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/weather_820d"
                android:contentDescription="@string/weather_icon_desc"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelTemperature2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/labelMaximum2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textColor="#EFEFEF"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="0.1"
                android:text="@string/maximum_temperature"/>

            <TextView
                android:id="@+id/maxForecastCelsiusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#EFEFEF"
                android:shadowColor="#000000"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="0.1"
                tools:text="33°C"/>

        </LinearLayout>

        <TextView
            android:id="@+id/forecastDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelTemperature2"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:textColor="#EFEFEF"
            android:shadowColor="#000000"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="0.1"
            tools:text="Descrição"/>

    </RelativeLayout>

    <Button
        android:id="@+id/redoSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginTop="32dp"
        android:textColor="#EFEFEF"
        android:background="@drawable/curve_boder_colored"
        android:padding="8dp"
        android:text="@string/re_do_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastWeather"/>

</androidx.constraintlayout.widget.ConstraintLayout>