...
            android:fontFamily="sans-serif-medium"
            android:textColor="#EFEFEF"
            android:textSize="18sp"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:maxLines="2"
            android:inputType="textCapWords|textPersonName"
...
            android:backgroundTint="#EFEFEF"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="26dp"/>

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:textColor="#EFEFEF"
            android:background="@drawable/curve_border"
            android:text="Pesquisar"/>
...
